베이스유알아이추가

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
 <script>
     function sendGetRequest() {
         // fetch 함수를 사용하여 GET 요청을 보냅니다.
-        fetch('http://localhost:8080/users/usersAll')
+        fetch('http://localhost:8080/users')
             .then(response => {
                 // 응답이 성공적으로 완료된 경우
                 if (!response.ok) {
