--- a/home/home.html
+++ b/home/home.html
@@ -76,7 +76,14 @@
       </ul>
       <script>
         async function get(endpoint, params = "") {
-          const apiUrl = params ? `${endpoint}/${params}` : endpoint;
+           // 기본 호스트 주소를 localhost:8080으로 변경
+   const baseUrl = 'http://localhost:8080';
+   const apiUrl = params ? `${baseUrl}${endpoint}/${params}` : `${baseUrl}/${endpoint}`;
+    console.trace('Current Call Stack: get ');
+   console.log(`%cGET 요청: ${apiUrl} `, "color: #a25cd1;");
+
+
+
           console.log(`%cGET 요청: ${apiUrl} `, "color: #a25cd1;");
 
           // 토큰이 있으면 Authorization 헤더를 포함, 없으면 포함하지 않음
@@ -98,7 +105,7 @@
         }
 
         async function test() {
-          get("/users/admin-check")
+          get("/users")
         }
       </script>
       <button id="test" onclick="test()">
