--- a/home/home.html
+++ b/home/home.html
@@ -78,12 +78,12 @@
         async function get(endpoint, params = "") {
            // 기본 호스트 주소를 localhost:8080으로 변경
    const baseUrl = 'http://localhost:8080';
-   const apiUrl = params ? `${baseUrl}${endpoint}/${params}` : `${baseUrl}/${endpoint}`;
+   const apiUrl = params ? `${baseUrl}${endpoint}/${params}` : `${baseUrl}${endpoint}`;
     console.trace('Current Call Stack: get ');
    console.log(`%cGET 요청: ${apiUrl} `, "color: #a25cd1;");
 
 
-
+          const apiUrl = params ? `${endpoint}/${params}` : endpoint;
           console.log(`%cGET 요청: ${apiUrl} `, "color: #a25cd1;");
 
           // 토큰이 있으면 Authorization 헤더를 포함, 없으면 포함하지 않음
@@ -105,7 +105,7 @@
         }
 
         async function test() {
-          get("/users")
+          get("/users/admin-check")
         }
       </script>
       <button id="test" onclick="test()">
