--- a/home/home.html
+++ b/home/home.html
@@ -105,7 +105,7 @@
         }
 
         async function test() {
-          get("/users/admin-check")
+          get("/users")
         }
       </script>
       <button id="test" onclick="test()">
