베이스유알아이추가

--- a/home/home.html
+++ b/home/home.html
@@ -77,7 +77,9 @@
       <script>
         async function get(endpoint, params = "") {
            // 기본 호스트 주소를 localhost:8080으로 변경
-   const baseUrl = 'http://34.64.187.23:8080';
+//   const baseUrl = 'http://34.64.187.23:8080'
+   const baseUrl = 'http://localhost:8080';
+
    const apiUrl = params ? `${baseUrl}${endpoint}/${params}` : `${baseUrl}${endpoint}`;
     console.trace('Current Call Stack: get ');
    console.log(`%cGET 요청: ${apiUrl} `, "color: #a25cd1;");
