베이스유알아이추가

--- a/home/home.html
+++ b/home/home.html
@@ -37,6 +37,8 @@
 <!--  <script src="../api.js"></script>-->
   <!-- 커스텀 css, js -->
   <link rel="stylesheet" href="/home/home.css" />
+  <script src="/home/home.js" type="module" defer></script>
+  <script src="../login/login.js" type="module" defer></script>
 
 </head>
 <body>
