--- a/home/home.html
+++ b/home/home.html
@@ -105,7 +105,7 @@
         }
 
         async function test() {
-          get("/products/category/1")
+          get("/products/1")
         }
       </script>
       <button id="test" onclick="test()">
