--- a/product-list/product-list.html
+++ b/product-list/product-list.html
@@ -71,6 +71,7 @@
       <div class="container product-item-container" id="producItemContainer">
         <!-- api 요청 후 만들어진 제품들 카드 요소가 삽입되는 곳 -->
       </div>
+      <div id="pagination"></div>
     </section>
   </body>
 </html>
