물품생성(이미지는 String으로 들어가도록해둠)

--- a/product-add/product-add.html
+++ b/product-add/product-add.html
@@ -78,11 +78,11 @@
           <form class="box register-product-form-box" id="registerProductForm">
             <p class="title is-5 has-text-primary">제품을 판매해 보세요</p>
             <div class="field">
-              <label class="label" for="titleInput">제품 이름</label>
+              <label class="label" for="nameInput">제품 이름</label>
               <div class="control">
                 <input
                   class="input"
-                  id="titleInput"
+                  id="nameInput"
                   type="text"
                   placeholder="아이보리 티셔츠"
                   autocomplete="on"
@@ -101,40 +101,40 @@
               </div>
             </div>
 
-            <div class="field">
-              <label class="label" for="manufacturerInput">제조사</label>
-              <div class="control">
-                <input
-                  class="input"
-                  id="manufacturerInput"
-                  type="text"
-                  placeholder="OO의류제조(주)"
-                  autocomplete="on"
-                />
-              </div>
-            </div>
+<!--            <div class="field">-->
+<!--              <label class="label" for="manufacturerInput">제조사</label>-->
+<!--              <div class="control">-->
+<!--                <input-->
+<!--                  class="input"-->
+<!--                  id="manufacturerInput"-->
+<!--                  type="text"-->
+<!--                  placeholder="OO의류제조(주)"-->
+<!--                  autocomplete="on"-->
+<!--                />-->
+<!--              </div>-->
+<!--            </div>-->
+
+<!--            <div class="field">-->
+<!--              <label class="label" for="shortDescriptionInput">요약 설명</label>-->
+<!--              <div class="control">-->
+<!--                <textarea-->
+<!--                  class="textarea"-->
+<!--                  id="shortDescriptionInput"-->
+<!--                  rows="3"-->
+<!--                  placeholder="제품에 대한 1~2문장의 설명을 적어 주세요."-->
+<!--                  autocomplete="on"-->
+<!--                ></textarea>-->
+<!--              </div>-->
+<!--            </div>-->
 
             <div class="field">
-              <label class="label" for="shortDescriptionInput">요약 설명</label>
-              <div class="control">
-                <textarea
-                  class="textarea"
-                  id="shortDescriptionInput"
-                  rows="3"
-                  placeholder="제품에 대한 1~2문장의 설명을 적어 주세요."
-                  autocomplete="on"
-                ></textarea>
-              </div>
-            </div>
-
-            <div class="field">
-              <label class="label" for="detailDescriptionInput"
+              <label class="label" for="descriptionInput"
                 >상세 설명</label
               >
               <div class="control">
                 <textarea
                   class="textarea"
-                  id="detailDescriptionInput"
+                  id="descriptionInput"
                   rows="8"
                   placeholder="제품에 대한 상세 설명을 적어 주세요."
                   autocomplete="on"
@@ -167,11 +167,11 @@
             </div>
 
             <div class="field">
-              <label class="label" for="inventoryInput">재고 수</label>
+              <label class="label" for="stockInput">재고 수</label>
               <div class="control">
                 <input
                   class="input"
-                  id="inventoryInput"
+                  id="stockInput"
                   type="number"
                   placeholder="10"
                   autocomplete="on"
@@ -195,24 +195,24 @@
               </div>
             </div>
 
-            <div class="field">
-              <label class="label" for="searchKeywordInput">검색 키워드</label>
-              <div class="field has-addons">
-                <div class="control header-search-input is-flex-grow-1">
-                  <input
-                    class="input"
-                    id="searchKeywordInput"
-                    type="text"
-                    placeholder="남자옷"
-                  />
-                </div>
-                <div class="control">
-                  <button class="button is-primary" id="addKeywordButton">
-                    추가하기
-                  </button>
-                </div>
-              </div>
-            </div>
+<!--            <div class="field">-->
+<!--              <label class="label" for="searchKeywordInput">검색 키워드</label>-->
+<!--              <div class="field has-addons">-->
+<!--                <div class="control header-search-input is-flex-grow-1">-->
+<!--                  <input-->
+<!--                    class="input"-->
+<!--                    id="searchKeywordInput"-->
+<!--                    type="text"-->
+<!--                    placeholder="남자옷"-->
+<!--                  />-->
+<!--                </div>-->
+<!--                <div class="control">-->
+<!--                  <button class="button is-primary" id="addKeywordButton">-->
+<!--                    추가하기-->
+<!--                  </button>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
 
             <div
               class="field is-grouped is-grouped-multiline mt-3"
