--- a/product-detail/product-detail.html
+++ b/product-detail/product-detail.html
@@ -98,6 +98,12 @@
                 바로 구매하기
               </button>
             </div>
+            <button class="button is-danger ml-2" id="editProductButton">
+              수정하기
+            </button>
+            <button class="button is-dark ml-2" id="deleteProductButton">
+              삭제하기
+            </button>
           </div>
         </div>
       </div>
