수정오류해결중

--- a/product-detail/product-detail.html
+++ b/product-detail/product-detail.html
@@ -98,9 +98,12 @@
                 바로 구매하기
               </button>
             </div>
-            <button class="button is-danger ml-2" id="editProductButton">
+<!--            <a class="menu-card" href="/account/security">-->
+              <a class="button is-danger ml-2" href="/product/edit">
+              <button class="button is-danger ml-2">
               수정하기
             </button>
+              </a>
             <button class="button is-dark ml-2" id="deleteProductButton">
               삭제하기
             </button>
