--- a/product-edit/product-edit.html
+++ b/product-edit/product-edit.html
@@ -72,11 +72,11 @@
     <section class="section">
       <div class="container">
         <div class="block account-header">
-          <h1 class="subtitle is-4">제품판매</h1>
+          <h1 class="subtitle is-4">제품수정</h1>
         </div>
         <div class="register-product-form-container">
           <form class="box register-product-form-box" id="registerProductForm">
-            <p class="title is-5 has-text-primary">제품을 판매해 보세요</p>
+            <p class="title is-5 has-text-primary">제품을 수정해 보세요</p>
             <div class="field">
               <label class="label" for="nameInput">제품 이름</label>
               <div class="control">
@@ -176,7 +176,7 @@
 
             <div class="mt-5">
               <button class="button is-primary is-fullwidth" id="submitButton">
-                제품 판매하기
+                제품 수정하기
               </button>
             </div>
           </form>
