--- a/product-detail/product-detail.html
+++ b/product-detail/product-detail.html
@@ -99,11 +99,14 @@
               </button>
             </div>
 <!--            <a class="menu-card" href="/account/security">-->
-              <a class="button is-danger ml-2" href="/product/edit">
-              <button class="button is-danger ml-2">
+<!--              <a class="button is-danger ml-2" href="/product/edit">-->
+<!--              <button class="button is-danger ml-2">-->
+<!--              수정하기-->
+<!--            </button>-->
+<!--              </a>-->
+            <button class="button is-danger ml-2" id="editProductButton">
               수정하기
             </button>
-              </a>
             <button class="button is-dark ml-2" id="deleteProductButton">
               삭제하기
             </button>
