--- a/account-security/account-security.html
+++ b/account-security/account-security.html
@@ -27,7 +27,7 @@
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="/account-security/account-security.css" />
     <script src="/account-security/account-security.js" type="module" defer></script>
-    <script src="../api.js"></script>
+    <script src="../api.js" type="module" ></script>
   </head>
   <body>
     <!-- 헤더 -->
