--- a/product-detail/product-detail.html
+++ b/product-detail/product-detail.html
@@ -104,12 +104,12 @@
 <!--              수정하기-->
 <!--            </button>-->
 <!--              </a>-->
-            <button class="button is-danger ml-2" id="editProductButton">
-              수정하기
-            </button>
-            <button class="button is-dark ml-2" id="deleteProductButton">
-              삭제하기
-            </button>
+<!--            <button class="button is-danger ml-2" id="editProductButton">-->
+<!--              수정하기-->
+<!--            </button>-->
+<!--            <button class="button is-dark ml-2" id="deleteProductButton">-->
+<!--              삭제하기-->
+<!--            </button>-->
           </div>
         </div>
       </div>
