--- a/admin-orders/admin-orders.html
+++ b/admin-orders/admin-orders.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Shopping Mall</title>
+    <title>PokeRanger</title>
     <!-- 아이콘 -->
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/elice-rabbit-favicon.png"
+      href="/pokerangerdog.png"
     />
     <!-- bulma css -->
     <link
@@ -32,8 +32,8 @@
       <div class="container mt-3">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">Shopping Mall</span>
+            <img src="/pokerangerdog.png" width="30" height="30" />
+            <span class="has-text-link">PokeRanger</span>
           </a>
 
           <a
