--- a/category-add/category-add.html
+++ b/category-add/category-add.html
@@ -87,7 +87,7 @@
                   class="input"
                   id="titleInput"
                   type="text"
-                  placeholder="Men Clothes"
+                  placeholder="사료, 간식"
                   autocomplete="on"
                 />
               </div>
@@ -100,7 +100,7 @@
                   class="input"
                   id="descriptionInput"
                   type="text"
-                  placeholder="센세이셔널한 봄, 여름 코디"
+                  placeholder="강아지 사료, 고양이 사료"
                   autocomplete="on"
                 />
               </div>
