--- a/product-add/product-add.html
+++ b/product-add/product-add.html
@@ -84,7 +84,7 @@
                   class="input"
                   id="nameInput"
                   type="text"
-                  placeholder="아이보리 티셔츠"
+                  placeholder="로얄 캐닌 어덜트 3.5kg"
                   autocomplete="on"
                 />
               </div>
@@ -101,31 +101,6 @@
               </div>
             </div>
 
-<!--            <div class="field">-->
-<!--              <label class="label" for="manufacturerInput">제조사</label>-->
-<!--              <div class="control">-->
-<!--                <input-->
-<!--                  class="input"-->
-<!--                  id="manufacturerInput"-->
-<!--                  type="text"-->
-<!--                  placeholder="OO의류제조(주)"-->
-<!--                  autocomplete="on"-->
-<!--                />-->
-<!--              </div>-->
-<!--            </div>-->
-
-<!--            <div class="field">-->
-<!--              <label class="label" for="shortDescriptionInput">요약 설명</label>-->
-<!--              <div class="control">-->
-<!--                <textarea-->
-<!--                  class="textarea"-->
-<!--                  id="shortDescriptionInput"-->
-<!--                  rows="3"-->
-<!--                  placeholder="제품에 대한 1~2문장의 설명을 적어 주세요."-->
-<!--                  autocomplete="on"-->
-<!--                ></textarea>-->
-<!--              </div>-->
-<!--            </div>-->
 
             <div class="field">
               <label class="label" for="descriptionInput"
